src/objects/Linea_Presupuesto__c.object
<CustomObject>
    <fields>
        <fullName>PREL_DIV_Cargar_Cliente_AI__c</fullName>
        <description>Importe a facturar al Cliente</description>
        <label>Facturación Cliente antes de impuestos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_DIV_Cargar_Cliente_DI__c</fullName>
        <description>Representa la cantidad a facturar al cliente después de impuestos</description>
        <label>Facturación Cliente después de impuesto</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_DIV_Cargar_Comp_AI__c</fullName>
        <label>Facturación Cía antes de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_DIV_Cargar_Comp_DI__c</fullName>
        <label>Facturación Cía después de impuesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_DIV_Facturacion_Total_AI__c</fullName>
        <description>Importe a facturar a la compañía/cliente sin impuestos</description>
        <label>Facturación Total antes de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_DIV_Facturacion_Total_DI__c</fullName>
        <description>Importe a facturar a la compañía/cliente con impuestos</description>
        <label>Facturación Total después de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PREL_LKP_Orden_Trabajo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Líneas de Presupuesto</relationshipLabel>
        <relationshipName>Lineas_de_Presupuesto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PREL_LKP_Presupuesto__c</fullName>
        <label>Presupuesto</label>
        <referenceTo>Presupuesto__c</referenceTo>
        <relationshipLabel>Líneas de Presupuesto</relationshipLabel>
        <relationshipName>Lineas_de_Presupuesto</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PREL_NUM_Unidades__c</fullName>
        <description>Cantidad de de unidades de la línea de presupuesto</description>
        <label>Unidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREL_POR_Impuesto_Cliente__c</fullName>
        <description>Porcentaje impuesto cliente/compañía</description>
        <label>Porcentaje impuesto cliente/compañía</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Codigo_Baremo__c</fullName>
        <description>Representa el Código de Baremo de la partida relacionada</description>
        <label>Código Baremo</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Codigo_Estado__c</fullName>
        <description>Nombres de Api de los valores del campo Estado</description>
        <label>Código Estado</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Codigo_Gremio__c</fullName>
        <description>Nombres de API de los valores de Gremio</description>
        <label>Código Gremio</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Descripcion_Baremo__c</fullName>
        <description>Representa la descripción del baremo de la partida vinculada</description>
        <label>Descripción Baremo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Detalle__c</fullName>
        <label>Observaciones</label>
        <length>360</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Estado__c</fullName>
        <description>Representa el estado de la línea de negocio mapeado con el estado de la Partida de Orden de Trabajo</description>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Gremio__c</fullName>
        <description>Gremio.</description>
        <label>Gremio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREL_TXT_Num_Orden_Trabajo__c</fullName>
        <description>Nº de Orden de Trabajo.</description>
        <label>Nº de Servicio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Línea de Presupuesto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de Presupuesto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>